Upgrade java to version 11 and use jib for docker build